# pythonista-gestures

./: Gestures.py  README.md  gestures.py  pygestures.py  pyproject.toml  zoompanscene.py
.github/workflows/: lint_python.yml
